--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "axios": "^1.6.8",
+    "i18next": "^23.11.2",
     "next": "14.1.3",
+    "next-i18next": "^15.3.0",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.0",
+    "react-select": "^5.8.0",
+    "swiper": "^11.1.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
   }
