--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "swiper": "^11.1.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
+  },
+  "devDependencies": {
+    "@types/nprogress": "^0.2.3"
   }
 }
